[gd_scene load_steps=8 format=2]

[ext_resource path="res://bot.gd" type="Script" id=1]
[ext_resource path="res://addons/discord_gd/discord.gd" type="Script" id=2]
[ext_resource path="res://command_extracter.gd" type="Script" id=3]
[ext_resource path="res://command_parser.gd" type="Script" id=4]
[ext_resource path="res://time_converter.gd" type="Script" id=5]
[ext_resource path="res://timer_queue.gd" type="Script" id=6]
[ext_resource path="res://file_parser.gd" type="Script" id=7]

[node name="Bot" type="Node"]
script = ExtResource( 1 )

[node name="DiscordBot" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="CommandExtracter" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CommandParser" type="Node" parent="CommandExtracter"]
script = ExtResource( 4 )

[node name="TimeConverter" type="Node" parent="CommandExtracter/CommandParser"]
script = ExtResource( 5 )

[node name="TimerQueue" type="Node" parent="."]
script = ExtResource( 6 )

[node name="FileParser" type="Node" parent="TimerQueue"]
script = ExtResource( 7 )

[node name="TimeChecker" type="Timer" parent="TimerQueue"]
wait_time = 5.0
autostart = true
